# homeworks-fork

./: .gitignore  .gitmodules  README.md
.github/workflows/: check-homework.yml
homeworks/: .gitignore
homeworks/homework_2/fortune_teller/: fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game.cpp
homeworks/homework_4/no_strings_attached/: CMakeLists.txt
homeworks/homework_4/no_strings_attached/cmake/: UpdateSubmodules.cmake
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  side.h  string_split.h  string_split.hpp  string_split_test.cpp  string_trim.h  string_trim_test.cpp
homeworks/homework_4/no_strings_attached/src/: CMakeLists.txt
homeworks/homework_4/no_strings_attached/src/no_strings_attached/: CMakeLists.txt  string_split.hpp
homeworks/homework_4/no_strings_attached/src/no_strings_attached/tests/: CMakeLists.txt  test_string_split.cpp
homeworks/homework_5/pixelator/: CMakeLists.txt
homeworks/homework_5/pixelator/examples/: CMakeLists.txt
homeworks/homework_5/pixelator/pixelator/: CMakeLists.txt  drawer.cpp  drawer.hpp  drawer_test.cpp  image.hpp  image_test.cpp  pixelate_image.cpp  pixelate_image.hpp  pixelate_image_test.cpp  stb_image_data_view.cpp  stb_image_data_view.hpp  stb_image_data_view_test.cpp
homeworks/homework_5/tui_pixelator/: CMakeLists.txt
homeworks/homework_5/tui_pixelator/examples/: CMakeLists.txt  pixelate.cpp  use_stb_image.cpp
homeworks/homework_5/tui_pixelator/tui_pixelator/: CMakeLists.txt  drawer.cpp  drawer.hpp  drawer_test.cpp  image.hpp  pixelate.cpp  pixelate.hpp  pixelate_image.cpp  pixelate_image.hpp  pixelate_image_test.cpp  pixelate_test.cpp  pixelated_image.hpp  pixelated_image_test.cpp  size.hpp  stb_image.cpp  stb_image.hpp  stb_image_data_view.hpp  stb_image_data_view_test.cpp  stb_image_test.cpp
homeworks/name_annotator/task_1/: name_annotator.cpp
